# GkTypesLib

./: .gitignore  CMakeLists.txt  CMakeSettings.json  GkTypesLib.sln  README.md  cpp.hint
GkTypesLib/: GkTypesLib.vcxproj  GkTypesLib.vcxproj.filters
GkTypesLib/GkTypes/: Asserts.h  BasicTypes.h  Core.h  GkTypesLib.h  Utility.h
GkTypesLib/GkTypes/Allocator/: Allocator.h  HeapAllocator.h
GkTypesLib/GkTypes/Array/: ArrayList.h  DynamicArray.h
GkTypesLib/GkTypes/Bitset/: Bitset.h
GkTypesLib/GkTypes/ClassRef/: ClassRef.h
GkTypesLib/GkTypes/CpuFeatures/: CpuFeatureDetector.h
GkTypesLib/GkTypes/Error/: Error.h  Result.h
GkTypesLib/GkTypes/Event/: Event.h
GkTypesLib/GkTypes/File/: FileLoader.h
GkTypesLib/GkTypes/Function/: Fptr.h
GkTypesLib/GkTypes/Hash/: Hashmap.h
GkTypesLib/GkTypes/Hashmap/: Hash.h  Hashmap.h
GkTypesLib/GkTypes/Job/: JobContainer.h  JobFuture.h  JobInfo.h  JobSystem.h  JobThread.h
GkTypesLib/GkTypes/Option/: Option.h
GkTypesLib/GkTypes/Queue/: RingQueue.h
GkTypesLib/GkTypes/String/: GlobalString.h  Str.h  String.h  TestString.h  Utf8.h
GkTypesLibTesting/: GkTest.cpp  GkTest.h  GkTypesLibTesting.vcxproj  GkTypesLibTesting.vcxproj.filters  test.cpp
GkTypesLibTesting/Temp/: OldString.h
GkTypesLibTesting/Tests/: ArrayListUnitTests.cpp  BitsetUnitTests.cpp  ClassRefUnitTests.cpp  DynamicArrayUnitTests.cpp  EventTests.cpp  FunctionPointerTests.cpp  GlobalStringUnitTests.cpp  HashMapTests.cpp  JobSystemUnitTests.cpp  JobThreadUnitTests.cpp  MutexTests.cpp  OptionUnitTests.cpp  RingQueueTests.cpp  RwLockUnitTests.cpp  StringTests.cpp  StringUnitTests.cpp  ThreadPoolUnitTests.cpp  ThreadUnitTests.cpp  Utf8StrUnitTests.cpp
GkTypesLibTesting/Utility/: Benchmark.cpp  Benchmark.h  EnglishWords.cpp  EnglishWords.h
GkTypesLibTests/: GkTypesLibTests.vcxproj  GkTypesLibTests.vcxproj.filters
GkTypesLibTests/Source/: Main.cpp  OldString.h
gk_types_lib/: basic_types.h  test.cpp  utility.cpp  utility.h
gk_types_lib/allocator/: allocator.cpp  allocator.h  heap_allocator.cpp  heap_allocator.h  testing_allocator.cpp  testing_allocator.h
gk_types_lib/array/: array_list.cpp  array_list.h
gk_types_lib/cpu_features/: cpu_feature_detector.cpp  cpu_feature_detector.h
gk_types_lib/doctest/: doctest.h  doctest_proxy.cpp  doctest_proxy.h
gk_types_lib/error/: result.cpp  result.h
gk_types_lib/function/: callback.cpp  callback.h  function_ptr.cpp  function_ptr.h
gk_types_lib/hash/: hash.h  hashmap.cpp  hashmap.h
gk_types_lib/job/: job_container.h  job_future.h  job_system.cpp  job_system.h  job_thread.cpp  job_thread.h
gk_types_lib/json/: json_object.cpp  json_object.h  json_string.h  serialization.cpp  serialization.h
gk_types_lib/option/: option.cpp  option.h
gk_types_lib/ptr/: shared_ptr.cpp  shared_ptr.h  unique_ptr.cpp  unique_ptr.h
gk_types_lib/queue/: ring_queue.cpp  ring_queue.h
gk_types_lib/reflection/: field_name.h  has_n_fields.h
gk_types_lib/string/: global_string.cpp  global_string.h  str.cpp  str.h  string.cpp  string.h  string_type_conversion.cpp  string_type_conversion.h  utf8.cpp  utf8.h
gk_types_lib/sync/: mutex.cpp  mutex.h  rw_lock.cpp  rw_lock.h
scripts/: generate_reflection_field_count.py
(+9 files in other folders)
